[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main_menu/main_menu.gd" type="Script" id=1]

[node name="MainMenuControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -34.0
margin_right = 47.5
margin_bottom = 34.0
alignment = 1

[node name="NewGameButton" type="Button" parent="Menu"]
margin_right = 95.0
margin_bottom = 20.0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 95.0
margin_bottom = 44.0
text = "Load Game"

[node name="StartInCryptButton" type="Button" parent="Menu"]
editor/display_folded = true
margin_top = 48.0
margin_right = 95.0
margin_bottom = 68.0
text = "Start In Crypt"

[node name="CryptSeed" type="SpinBox" parent="Menu/StartInCryptButton"]
editor/display_folded = true
margin_left = 120.0
margin_top = -2.0
margin_right = 194.0
margin_bottom = 22.0
min_value = -1.0
max_value = 2.14748e+09
value = -1.0

[node name="CryptSeedLabel" type="Label" parent="Menu/StartInCryptButton/CryptSeed"]
margin_left = 80.0
margin_top = 6.0
margin_right = 325.0
margin_bottom = 23.0
text = "Crypt Seed: -1 will generate a random crypt"

[node name="SettingsButton" type="Button" parent="Menu"]
margin_top = 72.0
margin_right = 95.0
margin_bottom = 92.0
text = "Settings"

[node name="QuitButton" type="Button" parent="Menu"]
margin_top = 96.0
margin_right = 95.0
margin_bottom = 116.0
text = "Quit"
[connection signal="pressed" from="Menu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Menu/StartInCryptButton" to="." method="_on_StartInCryptButton_pressed"]
[connection signal="pressed" from="Menu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
